--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "server"
+name = "cli"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
-bytes = "1"
